--- a/angular/angular/angular.json
+++ b/angular/angular/angular.json
@@ -66,6 +66,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 5200
+          },
           "configurations": {
             "production": {
               "browserTarget": "angular:build:production"
